ow-run-command-async: don't reuse process buffer, return process
needed to make it easier to debug failing commands

--- a/orgware.org
+++ b/orgware.org
@@ -640,9 +640,15 @@ the string output of the process.
                         (cl-remove-if (lambda (x) (or (not x) (eq x :sentinel)))
                                       (plist-put args :sentinel nil)))
                    args))
-         (process (apply #'start-process (format "process-%s" command) (format "process-buffer-%s" command) command args)))
+         (process (apply #'start-process
+                         (format "process-%s" command)
+                         (generate-new-buffer
+                          (format "process-buffer-%s" command))
+                         command
+                         args)))
     (when sentinel
-      (set-process-sentinel process sentinel))))
+      (set-process-sentinel process sentinel))
+    process))
 
 #+end_src
 ** cli and orthauth
